--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -1,5 +1,5 @@
 ///
-/// Future Imperfect by HTML5 UP
+/// Multiverse by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -13,22 +13,22 @@
 	.button {
 		@include vendor('appearance', 'none');
 		@include vendor('transition', (
-			'background-color #{_duration(transition)} ease',
-			'box-shadow #{_duration(transition)} ease',
-			'color #{_duration(transition)} ease'
+			'background-color #{_duration(transition)} ease-in-out',
+			'box-shadow #{_duration(transition)} ease-in-out',
+			'color #{_duration(transition)} ease-in-out'
 		));
 		background-color: transparent;
 		border: 0;
-		box-shadow: inset 0 0 0 1px _palette(border);
+		border-radius: 0;
+		box-shadow: inset 0 0 0 2px _palette(border);
 		color: _palette(fg-bold) !important;
 		cursor: pointer;
 		display: inline-block;
-		font-family: _font(family-heading);
-		font-size: 0.6em;
-		font-weight: _font(weight-heading-bold);
-		height: _size(element-height) * 1.75;
-		letter-spacing: _font(kerning-heading);
-		line-height: _size(element-height) * 1.75;
+		font-size: 0.9em;
+		font-weight: _font(weight-bold);
+		height: _size(element-height) * (1 / 0.9);
+		letter-spacing: _font(kerning-alt);
+		line-height: _size(element-height) * (1 / 0.9);
 		padding: 0 2.5em;
 		text-align: center;
 		text-decoration: none;
@@ -36,49 +36,52 @@
 		white-space: nowrap;
 
 		&:hover {
-			box-shadow: inset 0 0 0 1px _palette(accent);
-			color: _palette(accent) !important;
+			box-shadow: inset 0 0 0 2px _palette(accent1);
+			color: _palette(accent1) !important;
 
 			&:active {
-				background-color: transparentize(_palette(accent), 0.95);
+				background-color: transparentize(_palette(accent1), 0.85);
+				color: _palette(accent1) !important;
 			}
 		}
 
-		&:before, &:after {
-			color: _palette(fg-light);
-			position: relative;
-		}
+		&.icon {
+			padding-left: 1.35em;
 
-		&:before {
-			left: -1em;
-			padding: 0 0 0 0.75em;
-		}
-
-		&:after {
-			left: 1em;
-			padding: 0 0.75em 0 0;
+			&:before {
+				margin-right: 0.5em;
+			}
 		}
 
 		&.fit {
 			width: 100%;
 		}
 
-		&.large {
-			font-size: 0.7em;
-			padding: 0 3em;
+		&.small {
+			font-size: 0.8em;
 		}
 
-		&.small {
-			font-size: 0.5em;
+		&.large {
+			font-size: 1.35em;
+		}
+
+		&.primary {
+			background-color: _palette(accent1);
+			box-shadow: none;
+
+			&:hover {
+				background-color: lighten(_palette(accent1), 10);
+				color: _palette(fg-bold) !important;
+
+				&:active {
+					background-color: darken(_palette(accent1), 10);
+				}
+			}
 		}
 
 		&.disabled,
 		&:disabled {
 			@include vendor('pointer-events', 'none');
-			color: _palette(border) !important;
-
-			&:before {
-				color: _palette(border) !important;
-			}
+			opacity: 0.35;
 		}
 	}
